unpackaged/main/default/objects/Base_Asset_Template__c/Base_Asset_Template__c.object-meta.xml
<CustomObject>
    <description>The logical grouping of attributes configured to the lasest version for Assets to be implemented. This structure is used for the standards framework that PF applies to its SaaS platforms.</description>
    <label>Base Asset Template</label>
    <nameField>
        <label>Base Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Asset Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>