unpackaged/main/default/objects/Base_Asset_Template__c/fields/Asset_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Short_Name__c</fullName>
    <label>Asset Short Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>