unpackaged/main/default/objects/Base_Asset_Template__c/fields/Dev_Base_Asset_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Base_Asset_Template_Id__c</fullName>
    <label>Dev Base Asset Template Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>