unpackaged/main/default/objects/Base_Asset_Template__c/fields/RFI_Category__c.field-meta.xml
<CustomField>
    <fullName>RFI_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFI Category</label>
    <referenceTo>RFI_Categories__c</referenceTo>
    <relationshipLabel>Base Asset Templates</relationshipLabel>
    <relationshipName>Base_Asset_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>