unpackaged/main/default/objects/Base_Asset_Template__c/fields/RFI_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>RFI_Category_Name__c</fullName>
    <label>RFI Category Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>