unpackaged/main/default/objects/Base_Asset_Template__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Base Asset Templates</relationshipLabel>
    <relationshipName>Base_Asset_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>