unpackaged/main/default/objects/Base_Asset_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Short_Name__c</columns>
    <columns>TEM_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>